# haskell-course

./: .gitignore  Changes.md  Dockerfile  README.md  shell.nix
.devcontainer/: Dockerfile
Homework/Homework01/: Homework01.hs
Homework/Homework02/: Homework02.hs
Homework/Homework03/: Homework03.hs  Homework3A.hs
Homework/Homework04/: Homework04.hs
Homework/Homework05/: Homework05.hs
Homework/Homework06/: Homework06.hs
Homework/Homework07/: Homework07.hs
Homework/Homework08/: Homework.hs  Homework08.hs
Homework/Homework09/: Homework09.hs
Homework/Homework10/: Homework.hs  Homework10.hs
Homework/Homework11/: Homework.hs  Homework11.hs
Homework/Homework19/: Homework.hs  Homework18.cabal  Homework19.hs
Homework01/: Solution.hs
Homework02/: Solution.hs
Homework03/: Solution.hs
Homework03B/: Solution.hs
Homework04/: Solution.hs
Homework05/: Solution.hs
Homework06/: Solution.hs
Homework07/: Solution.hs
Homework08/: Solution.hs
Homework09/: 1-SolutionMaze.hs  2-SolutionForest.hs  Solution.hs
Homework10/: Solution.hs
Homework11/: Solution.hs
Homework12/: Homework.hs  Homework12.hs  README.md
Homework12/solution3/: solution3.cabal
Homework12/solution3/app/: Main.hs
Homework12/solution3/lib/: Libraries.hs
Homework13/: homework.cabal
Homework13/solution/: solution.cabal
Homework14/: Homework14.hs  Solotuion.hs  homework14.cabal
Homework14/ForestGameHWSolution/: ForestGameHWSolution.cabal  hie.yml
Homework14/ForestGameHWSolution/src/User/Actions/: Battle.hs
Homework14/arrays/app/: Main.hs
Homework15/: homework15.cabal
Homework16/: CHANGELOG.md  Solution.hs  homework16.cabal
Homework16/app/: Main.hs
Homework16/src/: TicTacToe.hs
Homework17/: Monoid.hs  Semigroup.hs  Solution.hs
Homework18/: Homework.hs  Solution.hs
Homework19/: Homework19.hs  Solution.hs
Homework20/: Solution.hs
Homework21/: Solution.hs
Homework22/: Solution.hs
Homework23/: Solution.hs
homework/Homework18/: Homework.cabal  Solution.hs
homework/Homework18/app/: Main.hs
images/: diagrams.drawio  haskell98_typeclasses.drawio
lessons/: 01-Introduction-to-haskell.ipynb  02-Functions-Data-Types-and-Signatures.ipynb  03-A-Conditions-and-helper-constructions.ipynb  03-A-Conditions-and-pattern-matching.ipynb  03-B-How-to-write-functions.ipynb  03-Conditions-and-helper-constructions.ipynb  04-Improving-and-combining-functions.ipynb  04-Pattern-matching.ipynb  05-Improving-and-combining-functions.ipynb  06-Recursion-and-folds.ipynb  06-Recursion.ipynb  07-Dealing-with-lists.ipynb  07-Intro-to-Type-Classes.ipynb  08-Creating-Types.ipynb  08-Creating-non-parameterized-types.ipynb  09-Creating-Type-Classes.ipynb  09-Creating-Types.ipynb  09-Creating-parameterized-and-recursive-types.ipynb  10-Basic-IO.ipynb  10-Creating-Type-Classes.ipynb  11-Basic-IO.ipynb  11-Pragmas-Modules-and-Cabal.ipynb  12-Bits-Bytes.ipynb  12-Installing-Haskell-and-first-program.ipynb  12-Pragmas-Modules-and-Cabal.ipynb  13-Bits-Bytes.ipynb  13-Learning-on-your-own.ipynb  13-Maybe-and-Either.ipynb  14-Handling-Errors.ipynb  14-Learning-on-your-own-and-project.ipynb  14-Maybe-and-Either.ipynb  15-Learning-on-your-own-and-project.ipynb  15-Semigroup-and-Monoid.ipynb  16-Functor.ipynb  16-Gaining-your-independence-and-project.ipynb  16-Semigroup-and-Monoid.ipynb  17-Applicative.ipynb  17-Functor.ipynb  17-Semigroup-and-Monoid.ipynb  170-Semigroup-and-Monoid.ipynb  (+32 more)
(+60 files in other folders)
