cabal-version:      2.4
name:               homework14
version:            0.1.0.0
synopsis:
homepage:
license:            Apache-2.0
license-file:       LICENSE
author:             Luka Kurnjek
maintainer:         luka.kurnjek@iohk.io

executable homework14
    main-is: Main.hs
    build-depends:    base >=4.14.3.0
                    , split
    hs-source-dirs:   app
    default-language: Haskell2010
