cabal-version:      3.0
name:               homework16
version:            0.1.0.0
license:            MIT
author:             Robertino Martinez
maintainer:         robertino.martinez@iohk.io
category:           LearningResource
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common common-options
    ghc-options:      -Wall
    default-language: Haskell2010
    --build-depends:    base ^>=4.18.1.0
    build-depends:    base

library
    import:           common-options
    exposed-modules:  TicTacToe
    build-depends:    random,
    hs-source-dirs:   src

executable homework15
    import:           common-options
    main-is:          Main.hs
    build-depends:    homework16,
    hs-source-dirs:   app
